--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -96,8 +96,8 @@
     "badge_corner_radius": 40,
     "sale_badge_color_scheme": "accent-2",
     "sold_out_badge_color_scheme": "inverse",
-    "brand_headline": "",
-    "brand_description": "<p><\/p>",
+    "brand_headline": "Test",
+    "brand_description": "<p>test<\/p>",
     "brand_image_width": 100,
     "social_facebook_link": "",
     "social_instagram_link": "",
