--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -1,6 +1,8 @@
 {
   "current": {
-    "logo_width": 90,
+    "logo": "shopify:\/\/shop_images\/ks-snippets.png",
+    "logo_width": 120,
+    "favicon": "shopify:\/\/shop_images\/ks-snippets.png",
     "type_header_font": "assistant_n4",
     "heading_scale": 100,
     "type_body_font": "assistant_n4",
